完成后台用户信息更新接口，确认  登陆与用户信息功用表  login 完成Android端个人信息列表信息展示 完成用户头像和用户个人信息背景图片的上传操作
next 底部文字信息的更新设置
信息更新对界面的刷新操作（AndroidEventBus）
侧滑菜单的信息更新设置，如果头像依然不行，则换，自定义头部布局

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -48,4 +48,9 @@
     <color name="item_content_text_color">#666666</color>
     <color name="item_bottom_text_color">#ff808080</color>
 
+    <!-- activity color-->
+    <color name="item_overlay_top_color">#64000000</color>
+
+
+    <color name="cache_color" >#FFF5F5F5</color>
 </resources>
