--- a/app/src/main/res/layout/item_activity_popular.xml
+++ b/app/src/main/res/layout/item_activity_popular.xml
@@ -2,9 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="188dp"
-    android:paddingTop="12dp"
-    android:paddingLeft="12dp"
-    android:paddingRight="12dp">
+    android:paddingTop="4dp"
+    android:paddingLeft="6dp"
+    android:paddingRight="6dp">
     <com.facebook.drawee.view.SimpleDraweeView
         xmlns:fresco="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
@@ -13,6 +13,8 @@
         fresco:placeholderImage="@mipmap/icon_placeholder"
         fresco:placeholderImageScaleType="fitCenter"
         fresco:roundedCornerRadius="8dp"
+        fresco:overlayImage="@color/item_overlay_top_color"
+        fresco:roundWithOverlayColor="@color/main_ground_color"
         />
     <TextView
         android:layout_width="wrap_content"
