完成用户信息修改界面相关逻辑
next
搭建服务器信息更改接口
信息更改后的相关更新UI逻辑

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -51,6 +51,10 @@
     <!-- activity color-->
     <color name="item_overlay_top_color">#64000000</color>
 
+    <!-- edit color-->
+    <color name="update_text_no_click_color">#e7cae2</color>
+    <color name="update_text_can_click_color">#ffffffff</color>
+
 
     <color name="cache_color" >#FFF5F5F5</color>
 </resources>
