--- a/app/src/main/res/layout/activity_my_message.xml
+++ b/app/src/main/res/layout/activity_my_message.xml
@@ -87,6 +87,7 @@
                  android:padding="12dp"
                  android:orientation="horizontal"
                  android:gravity="center_vertical"
+                 android:id="@+id/id_click_id_linear"
                  >
                  <TextView
                      android:layout_width="wrap_content"
@@ -115,6 +116,7 @@
                 android:padding="12dp"
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
+                android:id="@+id/id_click_nick_linear"
                 >
                 <TextView
                     android:layout_width="wrap_content"
@@ -143,6 +145,7 @@
                 android:padding="12dp"
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
+                android:id="@+id/id_click_sex_linear"
                 >
                 <TextView
                     android:layout_width="wrap_content"
@@ -171,6 +174,7 @@
                 android:padding="12dp"
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
+                android:id="@+id/id_click_erwei_linear"
                 >
                 <TextView
                     android:layout_width="wrap_content"
@@ -198,6 +202,7 @@
                 android:padding="12dp"
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
+                android:id="@+id/id_click_school_linear"
                 >
                 <TextView
                     android:layout_width="wrap_content"
@@ -227,6 +232,7 @@
                 android:padding="12dp"
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
+                android:id="@+id/id_click_dec_linear"
                 >
                 <TextView
                     android:layout_width="wrap_content"
