完成基本聊天集成～～～
next
聊天功能完善，界面优化
服务器聊天系统集成
好友添加逻辑

--- a/app/src/main/res/layout/fragment_friend.xml
+++ b/app/src/main/res/layout/fragment_friend.xml
@@ -5,11 +5,9 @@
     tools:context="layout.MessageFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:textColor="@color/md_blue_400"
-        android:text="好友界面" />
+        android:id="@+id/id_friend_list"/>
 
 </FrameLayout>
