--- a/app/src/main/res/layout/fragment_friend.xml
+++ b/app/src/main/res/layout/fragment_friend.xml
@@ -1,13 +1,12 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/id_swipe_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="layout.MessageFragment">
+    android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
     <ListView
+        android:id="@+id/id_friend_lv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/id_friend_list"/>
+        android:layout_height="match_parent" />
 
-</FrameLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
